[package]
name = "sturdy"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Rust Web Framework"
homepage = "https://sturdyframework.com"
repository = "https://github.com/jayclees/framework"
readme = "README.md"

[dependencies]
futures = "0.3.32"
http-body-util = "0.1.4"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
sea-orm = "2.0.0-rc.42"
tokio = { version = "1.52.3", features = ["net"] }
regex = "1.13.0"
chrono = "0.4.45"
serde_json = "1.0.150"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
minijinja-autoreload = "2.21.0"
minijinja = "2.21.0"
serde_qs = "1.1.2"
log = "0.4.33"
